# KWCM_lab1_AdaWrobel

./: README.md
src/: CMakeLists.txt  main.cpp
src/Trygonometria/: trygonometria.cpp  trygonometria.h
